add inst and header-panel

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
                     контактная информация
                 </div>
 
+                <div class="header-social-network">
+                    <a href="#">
+                        <img src="images/intagram-link.png" 
+                        alt=""
+                        class="instagram-img">
+                    </a>
+
+                    <a href="#">
+                        <img src="images/facebook.png" 
+                        alt=""
+                        class="facebook-img">
+                    </a>
+
+                </div>
                 
             </div>
 
