--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                     <img 
                     src="images/slider.png" 
                     alt="" 
-                    class="header-image">>
+                    class="header-image">
                 </div>
                 
             </div>
 
             <div class="header-panel">
                 <div class="header-rotatetext">
-                    контактная информация
+                    Контактная <span>информация</span>
                 </div>
 
                 <div class="header-social-network">
@@ -72,6 +72,18 @@
                         <img src="images/facebook.png" 
                         alt=""
                         class="facebook-img">
+                    </a>
+
+                    <a href="#">
+                        <img src="images/vkontakte.png" 
+                        alt=""
+                        class="vkontakte-img">
+                    </a>
+
+                    <a href="#">
+                        <img src="images/youtube.png" 
+                        alt=""
+                        class="youtube-img">
                     </a>
 
                 </div>
