--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:light&v1" rel="stylesheet">
-    
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans+Condensed" />
     <title>Sviridov</title>
 </head>
 <body>
