--- a/index.html
+++ b/index.html
@@ -106,58 +106,58 @@
                     <div class="history-title">
                         <span>О</span> ТЕАРТРЕ
                     </div>
+                    <div class="history-information">
+                        <div class="about-text">
+                            
+                            <div class="history-subtitle">
+                                Самый лучший театр СПБ
+                            </div>
 
-                    <div class="about-text">
-                        
-                        <div class="history-subtitle">
-                            Самый лучший театр СПБ
-                        </div>
-
-                        <div class="history-desc">
-                            Как свидетельствуют архивные документы, первое каменное <br>
-                            здание Большого театра начали возводить в 1775 году по <br>
-                            проекту Антонио Ринальди. В дальнейшем, после того как <br>
-                            Ринальди упал с лесов и не мог лично наблюдать за ходом <br>
-                            работ, Екатерина II поручила немецкому театральному <br>
-                            декоратору и архитектору Людвигу Филиппу Тишбейну создать <br>
-                            новый проект театра, который и был воплощён архитекторами <br>
-                            Ф. В. фон Бауром и М. А. Деденёвым. Открытие его состоялось <br>
-                            в 1783 году, хотя, основываясь на других свидетельствах, годом <br>
-                            открытия можно считать 1784 год.
-                        </div>
-                    </div>
-
-                    <div class="about-number">
-
-                        <div class="history-suptitle">
-                            немного о цифрах
-                        </div>
-                        <div class="seats">
-                            <img src="images/armchair 1.png" 
-                            alt="" 
-                            class="armchair">
-                            <div class="seats-item">
-                                <span>1600</span> посадочных мест
+                            <div class="history-desc">
+                                Как свидетельствуют архивные документы, первое каменное <br>
+                                здание Большого театра начали возводить в 1775 году по <br>
+                                проекту Антонио Ринальди. В дальнейшем, после того как <br>
+                                Ринальди упал с лесов и не мог лично наблюдать за ходом <br>
+                                работ, Екатерина II поручила немецкому театральному <br>
+                                декоратору и архитектору Людвигу Филиппу Тишбейну создать <br>
+                                новый проект театра, который и был воплощён архитекторами <br>
+                                Ф. В. фон Бауром и М. А. Деденёвым. Открытие его состоялось <br>
+                                в 1783 году, хотя, основываясь на других свидетельствах, годом <br>
+                                открытия можно считать 1784 год.
                             </div>
                         </div>
 
-                        <div class="history-years">
-                            <img src="images/theater1.png" 
-                            alt="" 
-                            class="theater1">
+                        <div class="about-number">
 
-                            <div class="history-years-desc">
-                                <span>350</span> лет истории
+                            <div class="history-suptitle">
+                                немного о цифрах
                             </div>
+                            <div class="seats">
+                                <img src="images/armchair 1.png" 
+                                alt="" 
+                                class="armchair">
+                                <div class="seats-item">
+                                    <span>1600</span> посадочных мест
+                                </div>
+                            </div>
+
+                            <div class="history-years">
+                                <img src="images/theater1.png" 
+                                alt="" 
+                                class="theater1">
+
+                                <div class="history-years-desc">
+                                    <span>350</span> лет истории
+                                </div>
+                            </div>
+
                         </div>
-
+                        <div class="history-img-original">
+                            <img src="images/Thearter-original-photo.png" 
+                            alt="" 
+                            class="history-images">
+                        </div>
                     </div>
-                    <div class="history-img-original">
-                        <img src="images/Thearter-original-photo.png" 
-                        alt="" 
-                        class="history-images">
-                    </div>
-
                 </div>
             </div>
         </div>
