the middle the words
I put in the middle the words about the theater and corrected the word

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="history-info">
 
                     <div class="history-title">
-                        <span>О</span> ТЕАРТРЕ
+                        <span>О</span> ТЕАТРЕ
                     </div>
                     <div class="history-information">
                         <div class="about-text">
@@ -162,5 +162,8 @@
             </div>
         </div>
     </div>
+
+
+    
 </body>
 </html>
