--- a/index.html
+++ b/index.html
@@ -163,7 +163,42 @@
         </div>
     </div>
 
+    <div class="projects">
+        <div class="container">
+            <div class="projects-title">
+                <span>НАШИ</span> ПОСТАНОВКИ
+            </div>
 
-    
+            <div class="project-slider">
+                <div class="projects-sliders">
+                    <div class="projects-item">
+                        <img src="images/project-slider/1.png" 
+                        alt="" 
+                        class="sliders-image">
+                    </div>
+
+                    <div class="projects-item">
+                        <img src="images/project-slider/2.png" 
+                        alt="" 
+                        class="sliders-image">
+                    </div>
+
+                    <div class="projects-item">
+                        <img src="images/project-slider/3.png" 
+                        alt="" 
+                        class="sliders-image">
+                    </div>
+
+                    <div class="projects-item">
+                        <img src="images/project-slider/4.png" 
+                        alt="" 
+                        class="sliders-image">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 </html>
